syntax = "proto3";

package gameap;

option go_package = "github.com/gameap/gameap/pkg/proto";

message DaemonTask {
  uint64 id = 1;
  optional uint64 run_after_id = 2;
  uint64 node_id = 3;
  optional uint64 server_id = 4;
  string task_type = 5;
  optional string data = 6;
  optional string cmd = 7;
  optional string output = 8;
  string status = 9;
  optional int64 created_at = 10;
  optional int64 updated_at = 11;
}
